# JOB-FINDER

./: .gitignore  Dockerfile  Dockerfile.heavy  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_advanced_fresher.py
config/: sources.yaml  target_companies.yaml
config/prompts/: batch_parse.py
prometheus/: metrics_exporter.py
scripts/: init_db.py
src/: config.py  exceptions.py  logger.py
src/api/: health_server.py
src/ingesters/tier1_api/: __init__.py
src/ingesters/tier2_static/: __init__.py
src/ingesters/tier3_heavy/: __init__.py
src/ingesters/tier4_telegram/: __init__.py
src/models/: database.py  job.py
src/processors/: ai_router.py  alerter.py  celery_app.py  dedup_engine.py  scorer.py
src/self_healing/: anomaly_detector.py  git_ops.py  incident_logger.py  patch_generator.py
tests/: test_core.py
